--- a/levelsandcurrency.css
+++ b/levelsandcurrency.css
@@ -1,10 +1,15 @@
 @media (max-width: 768px) {
 
-    body {
-        overflow-x: hidden;
-        background-size: contain;
-        background-position: center top;
-    }
+    
+   html, body {
+    overflow-x: hidden;
+  }
+
+   body {
+       position:relative;
+       background-size: contain;
+       background-position: center top;
+   }
 
     nav ul {
 
